# GraduationResearch

./: DEBUG_ORDER_STATUS.ps1  FIX_ORDER_STATUS_FINAL.md  MAPBOX_MIGRATION.md  README.MD  app.js  auto-fix-order-status.ps1  package-lock.json  test-complete-stop-api.ps1
.ai/: config.json
App/backend/: input.txt  output.txt
App/frontend/: .env.example  debug-route-display.md  index.html  vite.config.js
PDPTW/: README-NEW.md  README.md  REFACTOR_SUMMARY.md  output.txt  run.bat  run.sh
PDPTW/RELEASE/: PDPTW_ACO.cpp  PDPTW_GREEDY_INSERTION.cpp  PDPTW_HYBRID_ACO_GREEDY_V3.cpp  PDPTW_ORTOOLS.py  output.txt
PDPTW/backend/: .env  README.md  app.js  package-lock.json  package.json
PDPTW/frontend-react/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
PDPTW/validator/: validator.py
TSP/testcase/: 10.txt  100.txt  1000.txt  15.txt  20.txt  30.txt  400.txt  5.txt  50.txt  500.txt  800.txt
TSP/visualizer/: package.json
backend/: .env.example  .gitignore  API.md  ARCHITECTURE.md  Dockerfile  PDPTW_HYBRID_ACO_GREEDY_V3_LINUX  README.md  STEP_BY_STEP_TEST.md  TEST_GUIDE.md  TEST_README.md  debug-route.ps1  debug-route.sql  package-lock.json  package.json  run-all-tests.ps1  server.js  test-cleanup.sql  test-reoptimization-api.ps1  test-route-api-simple.ps1  test-step-1-unit-tests.ps1  test-step-2-api-fixed.ps1  test-step-2-api.ps1  test-step-3-integration.ps1  test_instance.txt  test_queue.js  test_solver_params.js  tsconfig.json
backend/pdptw_solver_module/: README.md  validate.py  validate_solution.bat
backend/pdptw_solver_module/tests/: CMakeLists.txt  test_ages_solver.cpp  test_destroy.cpp  test_evolution.cpp  test_fleet_minimization.cpp  test_io.cpp  test_lns_solver.cpp  test_main.cpp  test_population.cpp  test_repair.cpp
backend/pdptw_solver_module_v2/: Cargo.toml
backend/pdptw_solver_module_v2_origin/: CLI_COMPATIBILITY.md  Cargo.toml  README.md  run_all_tests.ps1  run_sartori_tests.ps1
backend/pdptw_solver_module_v3/: algo.md
backend/scripts/: analyze-instance.ts  check-orders-solver-feasibility.ts  check-orders-timewindows.ts  check-orders.ts  check-route-stops.ts  check-solution-coords.ts  debug-node-pair.ts  debug-rust-indexing.ts  fix-orders-timewindows.ts  simulate-rust-solver.ts  test-instance-generation.ts  test-sartori-format.ts  update-orders-with-sample-coords.ts
backend/src/: server.ts  supabaseAdmin.ts
backend/test_output/: bar-n100-1.7_983.00.txt  lr107.12_1334.94.txt
docs/: DYNAMIC_ROUTING_FLOW.md  ORDER_STATUS_UPDATE_FIX.md  PRIORITY_UPDATE_GUIDE.md  README.md  REOPTIMIZATION_IMPLEMENTATION.md
docs/ai-context/: codebase-overview.md  common-tasks.md
docs/architecture/: overview.md
docs/guides/: deployment-options.md  deployment.md
docs/mobile/: README.md  api-contracts.md  architecture-mvvm-xml.md  implementation-roadmap.md  offline-sync.md  rules-and-quality-gates.md  screens.md  testing.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
mobile/: README.md  build.gradle.kts  settings.gradle.kts
pdptw_solver/: .gitignore  CMakeLists.txt  build_and_test.bat
pdptw_solver/apps/: CMakeLists.txt  main.cpp
pdptw_solver/include/ages/: genetic_operators.h
pdptw_solver/include/pdptw/ages/: ages_solver.hpp
pdptw_solver/include/pdptw/construction/: bin.hpp  insertion.hpp  kdsp.hpp
pdptw_solver/include/pdptw/io/: li_lim_reader.hpp  sartori_buriol_reader.hpp  sintef_solution.hpp
pdptw_solver/include/pdptw/lns/: absence_counter.hpp
pdptw_solver/include/pdptw/lns/destroy/: absence_removal.hpp  operator.hpp  route_removal.hpp
pdptw_solver/include/pdptw/lns/repair/: hardest_first_insertion.hpp  regret_insertion.hpp
pdptw_solver/include/pdptw/problem/: travel_matrix.hpp
pdptw_solver/include/pdptw/refn/: ref_data.hpp  ref_node.hpp
pdptw_solver/include/pdptw/solution/: blocknode.hpp  datastructure.hpp  k_ejection.hpp  misc.hpp  ref_node_vec.hpp
pdptw_solver/include/pdptw/solver/: lns_solver.hpp
pdptw_solver/include/pdptw/utils/: logging.hpp  validator.hpp
pdptw_solver/solutions/: LC1_10_1.100_42519.48.txt  bar-n100-1.6_771.00.txt  bar-n100-2.5_576.00.txt  bar-n100-3.6_794.00.txt  bar-n100-3.6_796.00.txt  bar-n100-3.6_827.00.txt  bar-n100-3.6_838.00.txt  bar-n100-4.13_1170.00.txt  bar-n100-4.13_1176.00.txt  bar-n100-4.13_1184.00.txt  bar-n100-5.6_926.00.txt  bar-n100-5.7_920.00.txt  bar-n100-6.4_857.00.txt  bar-n200-2.25_2316.00.txt  bar-n200-2.25_2362.00.txt  bar-n200-2.25_2373.00.txt  bar-n200-2.25_2396.00.txt  bar-n200-3.10_1813.00.txt  bar-n200-3.10_1848.00.txt  bar-n200-4.14_1000.00.txt  bar-n200-4.14_988.00.txt  bar-n200-4.14_989.00.txt  bar-n200-4.14_990.00.txt  bar-n200-5.5_1075.00.txt  bar-n200-5.5_1211.00.txt  bar-n200-5.5_1235.00.txt  bar-n200-5.5_1240.00.txt  bar-n200-6.10_962.00.txt  bar-n200-6.10_987.00.txt  bar-n5000-1.273_36425.00.txt  bar-n5000-1.275_36487.00.txt
pdptw_solver/src/: CMakeLists.txt
pdptw_solver/src/ages/: ages_solver.cpp  genetic_operators.cpp
pdptw_solver/src/construction/: bin.cpp  constructor.cpp
pdptw_solver/src/decomposition/: recombiner.cpp
pdptw_solver/src/io/: sintef_solution.cpp
pdptw_solver/src/lns/: absence_counter.cpp  acceptance_criterion.cpp  fleet_minimization.cpp
pdptw_solver/src/lns/destroy/: adjacent_string_removal.cpp  route_removal.cpp
pdptw_solver/src/lns/largescale/: decomposition_lns.cpp
pdptw_solver/src/lns/repair/: absence_based_regret.cpp
pdptw_solver/src/problem/: travel_matrix.cpp
pdptw_solver/src/solution/: blocknode.cpp  datastructure.cpp  k_ejection.cpp  permutation.cpp  ref_list_node.cpp  requestbank.cpp
pdptw_solver/src/utils/: validator.cpp
pdptw_solver/tests/: test_adaptive_control.cpp  test_genetic_operators.cpp  test_genetic_operators_simple.cpp  test_helpers.hpp  test_validator.cpp
public/: aco_solver.cpp  index.html
supabase/: APPLY_MIGRATION_MANUALLY.sql  create-50-orders-hanoi.sql  schema_dump.sql  schema_remote.sql  schema_summary.txt  tables_overview.txt  test_user_query.sql
temp/: convergence.txt  input.txt  iteration_paths.txt  output.txt
(+515 files in other folders)
